Tst/Tests/Pos/Basic/NoEntry.p
main machine Foo {
    start state S1 { }
}
